--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -1,1 +1,6 @@
 api_url=https://jsonplaceholder.typicode.com
+
+url=https://www.watsons.ua/
+capabilities.browserName=chrome
+selenium_url=http://localhost:4444
+page_opening_strategy=BY_ELEMENT
